--- a/bootstrap.css
+++ b/bootstrap.css
@@ -7158,3 +7158,7 @@ a.text-dark:hover, a.text-dark:focus {
     body{
       background-image: url('images/background.png');
     }
+
+.overflow-scroll{
+  overflow: scroll;
+}
