--- a/bootstrap.css
+++ b/bootstrap.css
@@ -7085,6 +7085,9 @@ a.text-dark:hover, a.text-dark:focus {
 .text-decoration-none {
   text-decoration: none !important; }
 
+.text-decoration-underline {
+  text-decoration: underline;
+}
 .text-break {
   word-wrap: break-word !important; }
 
